--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<DOCTYPE html>
-    <html>
-        <head>
-            <title>Encriptador</title>
-        </head>
-        <body>
-            
-        </body>
-    </html>
-</DOCTYPE>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Encriptador de texto</title>
+</head>
+<body>
+    
+</body>
+</html>
